--- a/Security/3-AAA.tex
+++ b/Security/3-AAA.tex
@@ -4,39 +4,36 @@
 
 AAA network security services provide the primary framework to set up access control on a network device. AAA is a way to control who is permitted to access a network (authenticate), what they can do while they are there (authorize), and to audit what actions they performed while accessing the network (accounting).
 
-\paragraph{Authentication:} Cisco provides two common methods of implementing AAA authentication: Local AAA Authentication and Server-Based AAA Authentication. \textbf{Local AAA Authentication} uses a local database for authentication. This method stores usernames and passwords locally in the Cisco router. With \textbf{Server-Based AAA Authentication}, the central AAA server contains the usernames and password for all users.
+\textbf{Authentication:} Cisco provides two common methods of implementing AAA authentication: Local AAA Authentication and Server-Based AAA Authentication. \textbf{Local AAA Authentication} uses a local database for authentication. This method stores usernames and passwords locally in the Cisco router. With \textbf{Server-Based AAA Authentication}, the central AAA server contains the usernames and password for all users.
 
-\paragraph{Authorization} is typically implemented using a AAA server-based solution. Authorization uses a created set of attributes that describes the user’s access to the network. These attributes are compared to the information contained within the AAA database, and a determination of restrictions. Authorization is implemented immediately and automatically after the user is authenticated.
+\textbf{Authorization} is typically implemented using a AAA server-based solution. Authorization uses a created set of attributes that describes the user’s access to the network. These attributes are compared to the information contained within the AAA database, and a determination of restrictions. Authorization is implemented immediately and automatically after the user is authenticated.
 
-\paragraph{Accounting} is implemented using a AAA server-based solution. This service reports usage statistics back to the ACS server. 
+\textbf{Accounting} is implemented using a AAA server-based solution. This service reports usage statistics back to the ACS server. 
 
 \section{Local AAA authentication}
 
 \subsection{Configuration}
 
-Before enabling AAA, at least a local database entry must be configured. To enable AAA, the \code{aaa new-model} global configuration command must \emph{first} be configured. No other AAA commands are available until this command is entered. The \code{aaa authentication login} command allows the HUY users to log into the router vty terminal lines. The \code{default} keyword means that the authentication method applies to all lines. However, the next listed authentication methods \code{local-case} and \code{enable} overrides the default.
+Before enabling AAA, at least a local database entry must be configured. To enable AAA, the \code{aaa new-model} global configuration command must \emph{first} be configured. No other AAA commands are available until this command is entered. The \code{aaa authentication login} command allows the HUY users to log into the router vty terminal lines. The \code{default} keyword means that the authentication method applies to all lines (including vty line). However, when the method list \code{SSH-LOGIN} is applied to vty lines, it overrides the default method.  If you want to erase these custom methods \code{SSH-LOGIN}, use \code{no authentication login} command.
 
 \begin{sexylisting}{Local AAA authentication example}
-R1(config)# username HUY algorithm-type scrypt secret cisco12345
+username HUY algorithm-type scrypt secret cisco12345
 
-R1(config)# aaa new-model
-R1(config)# aaa authentication login default local-case enable
-R1(config)# aaa authentication login SSH-LOGIN local-case
+aaa new-model
+aaa authentication login default local-case enable
+aaa authentication login SSH-LOGIN local-case
 
-R1(config)# line vty 0 4
-R1(config)# login authentication SSH-LOGIN
+line vty 0 4
+login authentication SSH-LOGIN
 
-R1(config)# aaa local authentication attempts max-fail 3
+aaa local authentication attempts max-fail 3
 \end{sexylisting}
 
 
-Below is the syntax of \code{aaa authentication login} command. This command lists authentication methods (four methods at the maximum) in the order of execution. In other words, the next listed authentication method is executed only when there is no response or an error from the previous method occurs. The name of this list is specified by the user as \code{<list-name>}. Table \ref{login} shows all available method type keywords. \\
-
-\begin{sexylisting}{AAA Authentication login command syntax}
-aaa authentication login {default | list-name} method1 ... method4  [local | local-case]
-\end{sexylisting}
+Below is the syntax of \code{aaa authentication login} command. This command lists authentication methods (four methods at the maximum) in the order of execution. In other words, the next listed authentication method is executed only when there is no response or an error from the previous method occurs. The name of this list is specified by the user as \code{<list-name>}. Table \ref{login} shows the command syntax and all available method type keywords.
 
 \tableStart[\caption{AAA login authentication methods}\label{login}] {|l|l|} 
+\multicolumn{2}{|c|}{\code{aaa authentication login {default | list-name} method1 ... method4}}\w
 \head{Keywords} & \head{Description} \w
 \code{enable} & Use the enable password\w
 \code{local} & Use local username database\w
@@ -47,15 +44,9 @@ aaa authentication login {default | list-name} method1 ... method4  [local | loc
 \code{group <group-name>} & Use a subset of RADIUS or TACACS+ servers \w
 \tableEnd
 
-\note The custom authentication methods in the list \code{SSH-LOGIN} overrides the default method. If you want to erase these custom methods, use \code{no authentication login} command. This command returns all settings to default authentication method.
-
 The \code{aaa local authentication attempts max-fail} command locks the user account if the authentication fails. The locked out user account remains locked until it is manually cleared by an administrator using the \code{clear aaa local user lockout} privileged EXEC mode command. This command is different from \code{login delay} command, which introduces a delay between failed login attempts without locking the account.\\
 
-To display a list of all locked-out users, use the \code{sh aaa local user lockout} command. \\
-
-To display the history of activities (attributes), use the \code{sh aaa user} command. This command does not provide information for all users who are logged into a device, but only for those who have been authenticated or authorized using AAA, or whose sessions are being accounted for by the AAA module.\\
-
-The \code{sh aaa sessions} command can be used to show the unique ID of a session. Use \code{debug} commands with many keywords for troubleshooting authentication issues. The \code{debug aaa authentication} command is instrumental when troubleshooting AAA problems. 
+To display a list of all locked-out users, use the \code{sh aaa local user lockout} command. To display the history of activities (attributes), use the \code{sh aaa user} command. This command does not provide information for all users who are logged into a device, but only for those who have been authenticated or authorized using AAA, or whose sessions are being accounted for by the AAA module. The \code{sh aaa sessions} command can be used to show the unique ID of a session. The \code{debug aaa authentication} command is instrumental when troubleshooting AAA problems. 
 
 \section{Server-based AAA authentication}
 
@@ -97,27 +88,21 @@ There are three basic steps to configure server-based authentication:
 The following commands show how to accomplish step 1 and 2:
 
 \begin{sexylisting}{Create a TACACS+ server}
-R1(config)# aaa new-models
-R1(config)# 
-R1(config)# tacacs server Server-T
-R1(config-config-server-tacacs)# address ipv4 192.168.1.101
-R1(config-config-server-tacacs)# single-connection
-R1(config-config-server-tacacs)# key TACACS-Pa55w0rd
-R1(config-config-server-tacacs)# exit
-R1(config)# 
-R1(config)# 
+aaa new-models
+
+tacacs server Server-T
+  address ipv4 192.168.1.101
+  single-connection
+  key TACACS-Pa55w0rd
 \end{sexylisting}
 
 \begin{sexylisting}{Create a RAIDUS server}
-R1(config)# aaa new-models
-R1(config)# 
-R1(config)# radius server Server-R
-R1(config-config-server-tacacs)# address ipv4 192.168.1.101 auth-port 1812 acct-port 1813
-R1(config-config-server-tacacs)# single-connection
-R1(config-config-server-tacacs)# key RADIUS-Pa55w0rd
-R1(config-config-server-tacacs)# exit
-R1(config)# 
-R1(config)# 
+aaa new-models
+ 
+radius server Server-R
+  address ipv4 192.168.1.101 auth-port 1812 acct-port 1813
+  single-connection
+  key RADIUS-Pa55w0rd
 \end{sexylisting}
 
 The \code{address ipv4} command allows the option to modify IPv4 address of the server, authentication port, and accounting port. The \code{key} command is used to configure the shared secret key, which must be exactly the same way on both the router and the server.\\
@@ -127,7 +112,7 @@ The \code{single-connection} command (TACACS+ only) maintains a single TCP conne
 When the AAA servers have been identified as shown in the above commands, the servers must be included in the method list of the \code{aaa authentication login} command. AAA servers are identified using the \code{group tacacs+} or \code{group radius} keywords. 
 
 \begin{sexylisting}{Configure Authentication to Use the AAA Server}
-R1(config)# aaa authentication login default group tacacs+ group radius local-base
+aaa authentication login default group tacacs+ group radius local-base
 \end{sexylisting}
 
 The above commands configure a method list for the default login to authenticate first using a TACACS+ server, second with a RADIUS server, and finally with a local username database. It is important to realize that R1 will only attempt to authenticate using RADIUS if the TACACS+ server is not reachable. Likewise, R1 would only attempt to authenticate using the local database if the TACACS+ and RADIUS servers are unavailable.\\
@@ -142,8 +127,10 @@ To configure command authorization, use the \code{aaa authorization} command. Th
 \code{network} -- For network services such as PPP, \code{exec} -- For starting an exec (shell), \code{commands <level>} -- For exec (shell) commands. 
 
 \begin{sexylisting}{AAA Authorization Configuration}
-R1(config)# aaa authorization {network | commands <level> | exec} {default | <list-name>} method1 ... method4
-R1(config)# aaa authorization exec default group tacacs+
+aaa authorization {network | commands <level> | exec} {default | <list-name>} 
+  method1 ... method4
+  
+aaa authorization exec default group tacacs+
 \end{sexylisting}
 
 \section{Server-based AAA accounting}
@@ -151,9 +138,10 @@ R1(config)# aaa authorization exec default group tacacs+
 To configure AAA accounting, use the \code{aaa accounting} command. 
 
 \begin{sexylisting}{AAA Authorization Configuration}
-R1(config)# aaa accounting {network | connection | exec} {default | <list-name>} 
-                {statrt-stop | stop-only | none} [broadcast] method1 ... method4
-R1(config)# aaa account exec default start-stop group tacacs+
+aaa accounting {network | connection | exec} {default | <list-name>} 
+         {statrt-stop | stop-only | none} [broadcast] method1 ... method4
+
+aaa account exec default start-stop group tacacs+
 \end{sexylisting}
 
 The following three parameters are commonly used aaa accounting keywords:
@@ -188,20 +176,18 @@ The IEEE 802.1X standard defines a port-based access control and authentication 
 \begin{figure}[hbtp]
 \caption{802.1X roles}\label{802.1X}
 \centering
-\includegraphics[scale=0.5]{pictures/8021X.PNG}
+\includegraphics[scale=0.7]{pictures/8021X.PNG}
 \end{figure}
 
 If the Supplicant is successfully authenticated (receives an Accept frame from the authentication server), the port state changes to authorized, and all frames from the authenticated client are allowed through the port. If the authentication fails, the port remains in the unauthorized state, but authentication can be retried. If the authentication server cannot be reached, the switch can resend the request. If no response is received from the server after the specified number of attempts, authentication fails, and network access is not granted.
 
-\subsection{Message exchange}
-
 \begin{figure}[hbtp]
 \caption{802.1X message exchange}\label{MessageExchange}
 \centering
-\includegraphics[scale=0.5]{pictures/MessageExchange.PNG}
+\includegraphics[scale=0.7]{pictures/MessageExchange.PNG}
 \end{figure}
 
-Until the workstation is authenticated, 802.1X access control enables only EAPOL (EAP over LAN) traffic through the port to which the workstation is connected. After authentication succeeds, normal traffic can pass through the port. Figure \ref{MessageExchange} shows the complete message exchange between the supplicant, authenticator, and the authentication server. The encapsulation occurs as follows:
+\paragraph{Message exchange} Until the workstation is authenticated, 802.1X access control enables only EAPOL (EAP over LAN) traffic through the port to which the workstation is connected. After authentication succeeds, normal traffic can pass through the port. Figure \ref{MessageExchange} shows the complete message exchange between the supplicant, authenticator, and the authentication server. The encapsulation occurs as follows:
 
 \begin{itemize}
 \item Between the supplicant and the authenticator - EAP data is encapsulated in EAPOL frames.
@@ -210,28 +196,37 @@ Until the workstation is authenticated, 802.1X access control enables only EAPOL
 
 \subsection{Port Authorization State}
 
-The switch port state determines whether the client is granted access to the network. When configured for 802.1X port-based authentication, the port starts in the \emph{unauthorized state}. While in this state, the port disallows all ingress and egress traffic except for 802.1X protocol packets. When a client is successfully authenticated, the port transitions to the \emph{authorized state}, allowing all traffic for the client to flow normally. \\
+When configured for 802.1X port-based authentication, the port starts in the \emph{unauthorized state}. While in this state, the port disallows all ingress and egress traffic except for 802.1X protocol packets. When a client is successfully authenticated, the port transitions to the \emph{authorized state}, allowing all traffic for the client to flow normally. \\
 
 When a client logs out, it sends an EAPOL-logout message, causing the switch port to transition to the unauthorized state. If the link state of a port changes from up to down, or if an EAPOL-logoff frame is received, the port returns to the unauthorized state.\\    
 
 If the supplicant does not support 802.1X, the port remains in the unauthorized state. In contrast, if a switch that is not running the 802.1X protocol, the client begins sending frames as if the port is in the authorized state.\\
 
-\begin{sexylisting}{802.1X port control}
-R1(config)# interface f0/1
-R1(config-if)# authentication port-control {auto | force-authorized | force-unauthorized}
-\end{sexylisting}
-
-Use the \code{authentication port-control} command to control the port authorization state. By default, a port is in the force-authorized state meaning it can send and receive traffic without 802.1x authentication.
-
-\begin{itemize}
-\item \code{auto} -- Enable 802.1X authentication
-\item \code{force-authorized} -- Disable 802.1X authentication; Cause the port to remain authorized; Transmit normal traffic
-\item \code{force-unauthorized} -- Block all authentication services; Cause the port to remain unauthorized;
-\end{itemize}
 
 \subsection{Configuration}
 
 The following commands show a scenario where a PC is attached to F0/1 on the switch and the device is getting authenticated via 802.1X with a RADIUS server. Configuring 802.1X requires a few basic steps:
+
+
+
+\begin{sexylisting}{802.1X configuration}
+aaa new-models
+
+radius server Server-R
+  address ipv4 192.168.1.101 auth-port 1812 acct-port 1813
+  single-connection
+  key RADIUS-Pa55w0rd
+  exit
+ 
+aaa authentication dot1x default group radius
+dot1x system-auth-control
+
+interface f0/1
+  sw mode access
+  authentication port-control auto
+  dot1x pae authenticator
+  exit
+\end{sexylisting}
 
 \begin{enumerate}
 \item Enable AAA 
@@ -242,21 +237,10 @@ The following commands show a scenario where a PC is attached to F0/1 on the swi
 \item Enable 802.1X authentication on the interface using the \code{dot1x pae} command. The \code{authenticator} options sets the Port Access Entity (PAE) type so the interface acts only as an authenticator and will not respond to any messages meant for a supplicant.
 \end{enumerate}
 
-\begin{sexylisting}{802.1X configuration}
-R1(config)# aaa new-models
+The \code{authentication port-control} command has three options for port state:
 
-R1(config)# radius server Server-R
-R1(config-config-server-tacacs)# address ipv4 192.168.1.101 auth-port 1812 acct-port 1813
-R1(config-config-server-tacacs)# single-connection
-R1(config-config-server-tacacs)# key RADIUS-Pa55w0rd
-R1(config-config-server-tacacs)# exit
- 
-R1(config)# aaa authentication dot1x default group radius
-
-R1(config)# dot1x system-auth-control
-
-R1(config)# interface f0/1
-R1(config-if)# sw mode access
-R1(config-if)# authentication port-control auto
-R1(config-if)# dot1x pae authenticator
-\end{sexylisting}
+\begin{itemize}
+\item \code{auto} -- Enable 802.1X authentication
+\item \code{force-authorized} -- Disable 802.1X authentication. This option causes the port to remain authorized and transmit normal traffic. By default, a port is in the force-authorized state.
+\item \code{force-unauthorized} -- This option causes the port to remain unauthorized and lock all authentication services.
+\end{itemize}
